[package]
name = "crowdsec-gatekeeper"
version = "0.1.0"
edition = "2021"

[dependencies]
color-eyre = { version = "0.6.3", features = ["capture-spantrace"] }
once_cell = "1.20.3"
time = { version = "0.3.37", features = ["formatting", "macros"] }
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread", "tracing"] }
tracing = "0.1.41"
tracing-error = "0.2.1"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "time", "local-time"] }
